--- a/index.html
+++ b/index.html
@@ -1,180 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Валентинка 💖</title>
-<style>
-* { box-sizing: border-box; margin:0; padding:0; }
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ffb6c1, #ffe4ec);
-  overflow: hidden;
-}
-.card {
-  background:white;
-  padding: 30px 20px 40px;
-  border-radius: 25px;
-  text-align:center;
-  max-width: 360px;
-  width: 90%;
-  box-shadow:0 25px 60px rgba(0,0,0,0.15);
-}
-#text {
-  font-size:22px;
-  min-height:100px;
-  transition: all 0.3s ease;
-}
-.buttons {
-  display:flex;
-  gap:16px;
-  justify-content:center;
-  margin-top:25px;
-}
-button {
-  border:none;
-  border-radius:16px;
-  font-size:18px;
-  cursor:pointer;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-  width:130px;
-  height:55px;
-}
-#yes {
-  background: linear-gradient(135deg, #ff4d88, #ff7aa8);
-  color:white;
-  box-shadow: 0 10px 25px rgba(255,77,136,0.4);
-}
-#no {
-  background:#ededed;
-  color:#444;
-}
-.heart {
-  position: fixed;
-  bottom: -30px;
-  font-size:26px;
-  animation: fly 4s linear forwards;
-}
-@keyframes fly {
-  to {
-    transform: translateY(-120vh) rotate(360deg);
-    opacity: 0;
-  }
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Валентинка 💖</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div class="card">
   <div id="text">Будешь моей Валентинкой? 💖</div>
-  <div class="buttons" id="buttons">
+  <div class="buttons">
     <button id="yes">ДА</button>
     <button id="no">НЕТ</button>
   </div>
 </div>
 
-<script>
-const phrases = [
-  "Потому что вместе смеяться приятнее",
-  "Потому что рядом с тобой тепло",
-  "Потому что ты делаешь дни ярче",
-  "Потому что ты умеешь поддерживать",
-  "Потому что с тобой спокойно",
-  "Потому что ты особенная",
-  "Потому что ты даришь улыбки",
-  "Потому что рядом с тобой хорошо",
-  "Потому что ты заслуживаешь заботы",
-  "Потому что ты вдохновляешь",
-  "Потому что ты делаешь мир лучше",
-  "Потому что ты умеешь радовать",
-  "Потому что с тобой не скучно",
-  "Потому что ты искренняя",
-  "Потому что ты умеешь слушать",
-  "Потому что ты очень милая",
-  "Потому что ты светлая",
-  "Потому что ты классная",
-  "Потому что ты добрая",
-  "Потому что ты настоящая",
-  "Потому что ты умеешь удивлять",
-  "Потому что ты смешная",
-  "Потому что ты внимательная",
-  "Потому что ты заботливая",
-  "Потому что ты честная",
-  "Потому что ты тёплая душой",
-  "Потому что ты вдохновляешь быть лучше",
-  "Потому что ты приносишь радость",
-  "Потому что ты умеешь быть рядом",
-  "Потому что ты ценная",
-  "Потому что ты делаешь моменты важными",
-  "Потому что ты даришь уют",
-  "Потому что ты наполняешь",
-  "Потому что ты очень приятная",
-  "Потому что ты делаешь сердце спокойнее",
-  "Потому что ты особенный человек",
-  "Потому что ты умеешь поддержать словом",
-  "Потому что ты искренняя в мелочах",
-  "Потому что ты умеешь радоваться",
-  "Потому что ты светишься",
-  "Потому что ты мягкая",
-  "Потому что ты внимательна к чувствам",
-  "Потому что ты вызываешь улыбку",
-  "Потому что ты даришь тепло",
-  "Потому что ты создаёшь уют",
-  "Потому что ты хорошая",
-  "Потому что ты важна",
-  "Потому что ты нужна",
-  "Потому что ты просто ты"
-];
-
-let i = 0;
-let yesScale = 1;
-let noScale = 1;
-
-const textEl = document.getElementById("text");
-const yes = document.getElementById("yes");
-const no = document.getElementById("no");
-const buttons = document.getElementById("buttons");
-
-no.onclick = () => {
-  if (i < phrases.length) {
-    textEl.style.opacity = 0;
-    setTimeout(() => {
-      textEl.textContent = phrases[i];
-      textEl.style.opacity = 1;
-      i++;
-    }, 200);
-  }
-
-  yesScale += 0.15;
-  noScale -= 0.1;
-  yes.style.transform = scale(${yesScale});
-  no.style.transform = scale(${noScale});
-
-  if (noScale <= 0.3) {
-    no.style.opacity = 0;
-    setTimeout(() => no.style.display = "none", 300);
-  }
-};
-
-yes.onclick = () => {
-  buttons.style.display = "none";
-  textEl.textContent = "УРААА ❤️";
-  textEl.style.transform = "scale(1.4)";
-
-., [10.02.2026 18:09]
-for (let j = 0; j < 35; j++) {
-    const heart = document.createElement("div");
-    heart.className = "heart";
-    heart.textContent = "❤️";
-    heart.style.left = Math.random() * 100 + "vw";
-    heart.style.animationDuration = (3 + Math.random() * 2) + "s";
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 5000);
-  }
-};
-</script>
+<script src="script.js"></script>
 </body>
 </html>
